# agentrace

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
ci-cd/: index.html
docs/: api-reference.md  ci-cd.md  examples.md  getting-started.md  index.md
examples/: index.html  rag_with_routing.py  simple_chatbot.py
getting-started/: index.html
project_tracker/: TRACKER_UPDATE_GUIDE.md  project-state.json  project-tracker.html
search/: search_index.json
src/agentrace/: __init__.py  assertions.py  capture.py  plugin.py
src/agentrace/core/: __init__.py  differ.py  interceptor.py  models.py  wrapper.py
src/agentrace/reporters/: html.py  json_reporter.py  junit.py  mermaid.py  terminal.py
tests/: test_async.py  test_capture.py  test_comprehensive.py  test_html_reporter.py  test_json_junit.py  test_plugin.py  test_simple_agent.py  test_wrap.py
tests/agents/: routing_agent.py  simple_agent.py
