[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrace"
version = "0.1.0"
description = "Transparent tracing and instrumentation for LangGraph agents"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "langgraph",
    "langchain-core",
    "pydantic>=2.0",
    "deepdiff>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material",
    "pymdown-extensions",
]

[project.entry-points.pytest11]
agentrace = "agentrace.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["agentrace"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
